message("Checking cmake version...")                                                                # Printing message...
cmake_minimum_required(VERSION 3.0)                                                                 # Requiring cmake 3.0...

message("")                                                                                         # Printing message...
message("################################################################################")         # Printing message...
message("################################ C/C++ COMPILER ################################")         # Printing message...
message("################################################################################")         # Printing message...

message("Setting project name...")                                                                  # Printing message...
project (examples)                                                                                  # Setting project name...
message("Project name = ${PROJECT_NAME}")                                                           # Printing message...

set(CMAKE_CXX_STANDARD 17)                                                                          # Setting C++17 standard...
set(CMAKE_CXX_STANDARD_REQUIRED ON)                                                                 # Setting complier standard requirement...
set(CMAKE_CXX_EXTENSIONS OFF)                                                                       # Disabling compiler-specific standards...

message("Setting build type...")                                                                    # Printing message...
set(CMAKE_BUILD_TYPE Release)                                                                       # Setting build type...
message("Build type = ${CMAKE_BUILD_TYPE}")                                                         # Printing message...

message("Setting build directory...")                                                               # Printing message...
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY $<1:${CMAKE_HOME_DIRECTORY}/build/Release>)                      # Setting build directory...
message(${CMAKE_HOME_DIRECTORY}/build)                                                              # Printing message...

if(UNIX AND NOT APPLE)                                                                              
  set(LINUX TRUE)                                                                                   # Setting LINUX variable...
endif(UNIX AND NOT APPLE)

if(WIN32)
  string(REPLACE "\\" "/" GLAD_PATH "${GLAD_PATH}")                                                 # Adjusting backslashes...
  string(REPLACE "\\" "/" GLFW_PATH "${GLFW_PATH}")                                                 # Adjusting backslashes...
  string(REPLACE "\\" "/" GMSH_PATH "${GMSH_PATH}")                                                 # Adjusting backslashes...
  string(REPLACE "\\" "/" CL_PATH "${CL_PATH}")                                                     # Adjusting backslashes...
  string(REPLACE "\\" "/" IMGUI_PATH "${IMGUI_PATH}")                                               # Adjusting backslashes...
  string(REPLACE "\\" "/" IMPLOT_PATH "${IMPLOT_PATH}")                                             # Adjusting backslashes...
  string(REPLACE "\\" "/" NEUTRINO_PATH "${NEUTRINO_PATH}")                                         # Adjusting backslashes...
endif(WIN32)

message("Setting IMGUI_SOURCES...")                                                                 # Printing message...
set(IMGUI_SOURCES                                                                                   # All IMGUI source files.
  ${IMGUI_PATH}/imgui.cpp                                                                           # IMGUI source file...
  ${IMGUI_PATH}/imgui_demo.cpp                                                                      # IMGUI source file...
  ${IMGUI_PATH}/imgui_draw.cpp                                                                      # IMGUI source file...
  ${IMGUI_PATH}/backends/imgui_impl_glfw.cpp                                                        # IMGUI source file...
  ${IMGUI_PATH}/backends/imgui_impl_opengl3.cpp                                                     # IMGUI source file...
  ${IMGUI_PATH}/imgui_tables.cpp                                                                    # IMGUI source file...
  ${IMGUI_PATH}/imgui_widgets.cpp)                                                                  # IMGUI source file...

message("Setting IMPLOT_SOURCES...")                                                                # Printing message...
set(IMPLOT_SOURCES                                                                                  # All IMPLOT source files.
  ${IMPLOT_PATH}/implot.cpp                                                                         # IMPLOT source file...
  ${IMPLOT_PATH}/implot_items.cpp)                                                                  # IMPLOT source file...

message("Setting NU_INCLUDES...")                                                                   # Printing message...
set(NU_INCLUDES                                                                                     # Setting "NU_INCLUDES" variable...
  ${CMAKE_HOME_DIRECTORY}/include                                                                   # Example include directory.
  ${IMGUI_PATH}                                                                                     # IMGUI include directory.
  ${IMGUI_PATH}/backends                                                                            # IMGUI include backends directory.
  ${IMPLOT_PATH}                                                                                    # IMPLOT include directory.
  ${GLAD_PATH}/include                                                                              # GLAD include directory.
  ${GLFW_PATH}/include                                                                              # GLFW include directory.
  ${CL_PATH}/include                                                                                # OpenCL include directory.
  ${GMSH_PATH}/include                                                                              # GMSH include directory.
  ${NEUTRINO_PATH}/include)                                                                         # Neutrino include directory.

message("Setting NU_LINUX_TARGETS...")                                                              # Printing message...
set(NU_LINUX_TARGETS
  "-lOpenGL"                                                                                        # OpenGL library.
  "-lOpenCL"                                                                                        # OpenCL library.
  "-ldl"                                                                                            # "libdl" library.
  "-lglfw"                                                                                          # GLFW library.
  "-lm"                                                                                             # "math" library.
  "${GMSH_PATH}/lib/libgmsh.so"                                                                     # GMSH library.
  ${NEUTRINO_PATH}/lib/libnu.a)                                                                     # "neutrino" library.

message("Setting NU_WINDOWS_TARGETS...")                                                            # Printing message...
set(NU_WINDOWS_TARGETS
  ${CL_PATH}/lib/x64/OpenCL.lib                                                                     # OpenCL library.
  ${GLFW_PATH}/lib-vc2019/glfw3.lib                                                                 # GLFW library.
  ${GMSH_PATH}/lib/gmsh.lib                                                                         # GMSH library.
  ${NEUTRINO_PATH}/lib/nu.lib)                                                                      # "neutrino" library.

message("")                                                                                         # Printing message...
message("################################################################################")         # Printing message...
message("################################### Sinusoid ###################################")         # Printing message...
message("################################################################################")         # Printing message...
set(TARGET_1 "sinusoid")                                                                            # Setting executable name...
set(DIRECTORY_1 "Sinusoid/Code")                                                                    # Setting directory name...

message("Adding source files for ${TARGET_1}...")                                                   # Printing message...
aux_source_directory(${CMAKE_HOME_DIRECTORY}/${DIRECTORY_1}/src SRC_1)                              # Getting all Neutrino source files...
set(SOURCES_1 ${SRC_1})                                                                             # Setting "SOURCES" variable...

message("Adding build target as executable...")                                                     # Printing message...
add_executable(${TARGET_1} ${IMGUI_SOURCES} ${IMPLOT_SOURCES} ${SOURCES_1})                         # Adding executable...

message("Adding include files...")                                                                  # Printing message...
target_include_directories(${TARGET_1} PRIVATE ${NU_INCLUDES})                                      # Setting include directories...
                                                                        
message("Adding linked libraries...")                                                               # Printing message...
if(LINUX)
  target_link_libraries(                                                                            # Setting other linked libraries...
    ${TARGET_1}                                                                                     # Target name.
    ${NU_LINUX_TARGETS})                                                                            # Neutrino Linux targets.
endif(LINUX)

if(WIN32) 
  target_link_libraries(                                                                            # Setting other linked libraries...
    ${TARGET_1}                                                                                     # Target name.
    ${NU_WINDOWS_TARGETS})                                                                          # Neutrino Windows targets.
endif(WIN32)

message("DONE!")                                                                                    # Printing message...

message("")                                                                                         # Printing message...
message("################################################################################")         # Printing message...
message("################################### Cloth ######################################")         # Printing message...
message("################################################################################")         # Printing message...
set(TARGET_2 "cloth")                                                                               # Setting executable name...
set(DIRECTORY_2 "Cloth/Code")                                                                       # Setting directory name...

message("Adding source files for ${TARGET_2}...")                                                   # Printing message...
aux_source_directory(${CMAKE_HOME_DIRECTORY}/${DIRECTORY_2}/src SRC_2)                              # Getting all Neutrino source files...
set(SOURCES_2 ${SRC_2})                                                                             # Setting "SOURCES" variable...

message("Adding build target as executable...")                                                     # Printing message...
message("Adding build target as executable...")                                                     # Printing message...
add_executable(${TARGET_2} ${IMGUI_SOURCES} ${IMPLOT_SOURCES} ${SOURCES_2})                         # Adding executable...

message("Adding include files...")                                                                  # Printing message...
target_include_directories(${TARGET_2} PRIVATE ${NU_INCLUDES})                                      # Setting include directories...
                                                                        
message("Adding linked libraries...")                                                               # Printing message...

if(LINUX)
  target_link_libraries(                                                                            # Setting other linked libraries...
    ${TARGET_2}                                                                                     # Target name.
    ${NU_LINUX_TARGETS})                                                                            # Neutrino Linux targets.
endif(LINUX)

if(WIN32) 
  target_link_libraries(                                                                            # Setting other linked libraries...
    ${TARGET_2}                                                                                     # Target name.
    ${NU_WINDOWS_TARGETS})                                                                          # Neutrino Windows targets.
endif(WIN32)

message("DONE!")                                                                                    # Printing message...

message("")                                                                                         # Printing message...
message("################################################################################")         # Printing message...
message("################################### Gravity ####################################")         # Printing message...
message("################################################################################")         # Printing message...
set(TARGET_3 "gravity")                                                                             # Setting executable name...
set(DIRECTORY_3 "Gravity/Code")                                                                     # Setting directory name...

message("Adding source files for ${TARGET_3}...")                                                   # Printing message...
aux_source_directory(${CMAKE_HOME_DIRECTORY}/${DIRECTORY_3}/src SRC_3)                              # Getting all Neutrino source files...
set(SOURCES_3 ${SRC_3})                                                                             # Setting "SOURCES" variable...

message("Adding build target as executable...")                                                     # Printing message...
message("Adding build target as executable...")                                                     # Printing message...
add_executable(${TARGET_3} ${IMGUI_SOURCES} ${IMPLOT_SOURCES} ${SOURCES_3})                         # Adding executable...

message("Adding include files...")                                                                  # Printing message...
target_include_directories(${TARGET_3} PRIVATE ${NU_INCLUDES})                                      # Setting include directories...
                                                                        
message("Adding linked libraries...")                                                               # Printing message...

if(LINUX)
  target_link_libraries(                                                                            # Setting other linked libraries...
    ${TARGET_3}                                                                                     # Target name.
    ${NU_LINUX_TARGETS})                                                                            # Neutrino Linux targets.
endif(LINUX)

if(WIN32) 
  target_link_libraries(                                                                            # Setting other linked libraries...
    ${TARGET_3}                                                                                     # Target name.
    ${NU_WINDOWS_TARGETS})                                                                          # Neutrino Windows targets.
endif(WIN32)

message("DONE!")                                                                                    # Printing message...

message("")                                                                                         # Printing message...
message("################################################################################")         # Printing message...
message("#################################### Mesh ######################################")         # Printing message...
message("################################################################################")         # Printing message...
set(TARGET_4 "mesh")                                                                                # Setting executable name...
set(DIRECTORY_4 "Mesh/Code")                                                                        # Setting directory name...

message("Adding source files for ${TARGET_4}...")                                                   # Printing message...
aux_source_directory(${CMAKE_HOME_DIRECTORY}/${DIRECTORY_4}/src SRC_4)                              # Getting all Neutrino source files...
set(SOURCES_4 ${SRC_4})                                                                             # Setting "SOURCES" variable...

message("Adding build target as executable...")                                                     # Printing message...
add_executable(${TARGET_4} ${IMGUI_SOURCES} ${IMPLOT_SOURCES} ${SOURCES_4})                         # Adding executable...

message("Adding include files...")                                                                  # Printing message...
target_include_directories(${TARGET_4} PRIVATE ${NU_INCLUDES})                                      # Setting include directories...
                                                                        
message("Adding linked libraries...")                                                               # Printing message...

if(LINUX)
  target_link_libraries(                                                                            # Setting other linked libraries...
    ${TARGET_4}                                                                                     # Target name.
    ${NU_LINUX_TARGETS})                                                                            # Neutrino Linux targets.
endif(LINUX)

if(WIN32) 
  target_link_libraries(                                                                            # Setting other linked libraries...
    ${TARGET_4}                                                                                     # Target name.
    ${NU_WINDOWS_TARGETS})                                                                          # Neutrino Windows targets.
endif(WIN32)

message("DONE!")                                                                                    # Printing message...

message("")                                                                                         # Printing message...
message("################################################################################")         # Printing message...
message("################################# INSTRUCTIONS #################################")         # Printing message...
message("################################################################################")         # Printing message...

message("Now go to the \"build\" directory created by this command and do one (or more)")           # Printing message...
message("of the following things:")                                                                 # Printing message...
message("")                                                                                         # Printing message...
message("1. Type: \"make\" or \"make all\" in order to build all example executables.")             # Printing message...
message("2. Type: \"make <example_name>\" in order to build only a specific example executable.")   # Printing message...
message("   The name of each example is the lowercase name of its corresponding directory:")        # Printing message...
message("   e.g. EXAMPLE = Sinusoid --> EXECUTABLE = sinusoid")                                     # Printing message...
message("        make sinusoid")                                                                    # Printing message...
message("3. Type: \"make doc\" in order to build the Doxygen documentation of the project.")        # Printing message...
message("")                                                                                         # Printing message...
message("################################################################################")         # Printing message...
message("############################# CONFIGURATION REPORT #############################")         # Printing message...
message("################################################################################")         # Printing message...
